--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -28,7 +28,7 @@
 			<input id="name" type = "text" #nameInput placeholder="Name..."><br>
 			<p>Alter</p> <br>
 			<input id="alter" type = "number" #ageInput placeholder="Alter..."><br>
-			<button class="btn" (click) = "create({id: 0,name: nameInput.value, age: ageInput.value})">Create</button>
+			<button class="btn" (click) = "create({id: 0,name: nameInput.value, alter: ageInput.value})">Create</button>
 		</div>
 	</div>
 
